<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_baskara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bask" android:textSize="20sp" android:textStyle="normal" android:layout_marginTop="10sp" android:layout_gravity="center_horizontal" android:layout_marginLeft="10sp" android:textColor="#7a378b" android:layout_marginRight="10sp"/>
    
    <EditText
        android:id="@+id/ed_bask_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal" android:layout_marginBottom="10sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp" android:layout_marginTop="30sp" android:hint="@string/ed_bask_a">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ed_bask_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal" android:layout_marginBottom="10sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp" android:hint="@string/ed_bask_b"/>

    <EditText
        android:id="@+id/ed_bask_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal" android:layout_marginLeft="10sp" android:layout_marginRight="10sp" android:layout_marginBottom="10sp" android:hint="@string/ed_bask_c"/>

    <Button
        android:id="@+id/bt_baskara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_bask" android:textSize="20sp" android:textStyle="bold" android:typeface="monospace" android:layout_gravity="center_horizontal"/>

</LinearLayout>