<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@drawable/background">

    <TextView
        android:id="@+id/textViewGrau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_grau" android:textStyle="normal" android:typeface="normal" android:textSize="20sp" android:layout_marginLeft="10sp" android:layout_marginTop="30sp" android:textColor="#7a378b"/>

    <EditText
        android:id="@+id/edTxtGrau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" android:layout_marginBottom="10sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp" android:layout_marginTop="30sp" android:hint="@string/ed_grau"/>

    <Button
        android:id="@+id/btnConverterGrau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_grau" android:textSize="20sp" android:textStyle="bold" android:typeface="serif" android:layout_gravity="center_horizontal"/>

</LinearLayout>