<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fat" android:textSize="20sp" android:textStyle="normal" android:typeface="normal" android:layout_marginLeft="10sp" android:layout_marginTop="30sp" android:layout_marginBottom="10sp" android:textColor="#7a378b"/>

    <EditText
        android:id="@+id/ed_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" android:layout_marginBottom="10sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp" android:hint="@string/ed_fat" android:layout_marginTop="20sp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bt_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_fat" android:textSize="20sp" android:textStyle="bold" android:typeface="monospace" android:layout_gravity="center_horizontal"/>

</LinearLayout>